[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "auragateway"
version = "0.1.0"
description = "Cache-aware agent runtime and evaluation harness for controlled AI reliability benchmarking."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.12,<3",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15,<2",
  "pytest>=8,<10",
  "ruff>=0.15,<0.16",
]

[project.scripts]
auragateway-validate-corpus = "auragateway.corpus.validate:main"
auragateway-freeze-corpus = "auragateway.corpus.freeze:main"
auragateway-chunk-corpus = "auragateway.chunking.runner:main"
auragateway-retrieve-bm25 = "auragateway.retrieval.runner:main"
auragateway-evaluate-retrieval = "auragateway.evals.runner:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["B", "E", "F", "I", "RUF", "SIM", "UP"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
files = ["src", "tests"]
warn_unused_configs = true

